<resources>
    <string name="app_name">Washkar</string>
    <string name="home">Home</string>
    <string name="order">Order</string>
    <string name="offers">Offers</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="google_map_API_key">AIzaSyCQF9Kej8GrVoIA3esXPg4BcXVYVUgUteM</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refer"><![CDATA[Refer & Earn]]></string>
    <string name="terms"><![CDATA[Terms & Services]]></string>
    <string name="logout">Log Out</string>
    <string name="privacy_policy_string">By proceeding you agree to the <font color='#269131'>Terms of Use</font> and<font color='#269131'> Privacy Policy</font></string>

    <string name="IS_FIRST_TIME_LAUNCH">IsFirstTimeLaunch</string>
    <string name="slider1_description">By handling all your laundry needs we give you cleaner and healthy way of life</string>
    <string name="discription_slider2">Avail exclusive offers and cashbacks when you order from app and share with your friends</string>
    <string name="discription_slider3">Select convenient time and date,place to an order.Our agent will pickup your laundry</string>
    <string name="PRICE_OBJ_ID">PriceObjId</string>
    <string name="FULL_NAME">FullName</string>
    <string name="EMAIL">Email</string>
    <string name="PHONE_NUMBER">PhoneNumber</string>
    <string name="TOKEN">Token</string>
    <string name="ADDRESS">Address</string>
    <string name="Rs">\u20B9</string>
    <string name="light_text">Loading</string>
    <string name="forget_password">Forget Password</string>
    <!--    <string name="old_passwor">-->
    <!--    New Password--> v
    <!--    </string>-->
    <!--        <string name="new_passwor">-->
    <!--    Confirm Password-->
    <!--    </string>-->
    <!--        <string name="change_pass">-->
    <!--    Reset Password-->
    <!--    </string>-->
    <string name="submit">submit</string>
    <string name="ADDRESS_ID">address_id</string>


</resources>
