<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"/>

    <item
        android:id="@+id/nav_order"
        android:icon="@drawable/ic_event_note_black_24dp"
        android:title="@string/order"/>

    <item
        android:id="@+id/nav_offer"
        android:icon="@drawable/ic_local_offer_black_24dp"
        android:title="@string/offers"/>

    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/cart"/>

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/account"/>

</menu>